--- a/config/krakend/krakend-flexible-config.tmpl
+++ b/config/krakend/krakend-flexible-config.tmpl
@@ -1,5 +1,5 @@
 {
-    "$id": "https://www.krakend.io/schema/v3.json",
+    "$schema": "https://www.krakend.io/schema/v3.json",
     "version": 3,
     "name": "Sample Gateway",
     "port": {{ .env.port }},
